fix word wrap in <pre>

--- a/style.styl
+++ b/style.styl
@@ -112,6 +112,11 @@ td
   padding 1ex
   border cellBorder
 
+#queryModal pre
+  word-wrap break-word
+  white-space -moz-pre-wrap
+  white-space pre-wrap
+
 #resFields
   td, th
     border cellBorder
